--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
-    "pdfkit": "^0.14.0"
+    "pdfkit": "^0.14.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
