--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,8 @@ services:
     buildCommand: npm install && node server/scripts/postinstall.js
     startCommand: npm start
     envVars:
+      - key: NODE_ENV
+        value: production
       - key: DATABASE_URL
         sync: false
       - key: CLOUDINARY_CLOUD_NAME
