UI: Add brand logo to Sidebar and Login

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,22 @@
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
+FRONTEND_URL=http://localhost:5173
 
-# Database
-DATABASE_URL="file:./prisma/dev.db"
+# MongoDB Atlas
+MONGODB_URI=mongodb+srv://thedarjicreations_db_user:kartikey1@cluster0.mongodb.net/thedarji_production?retryWrites=true&w=majority
 
-# JWT Secret (Change this to a random string in production!)
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# JWT Authentication
+JWT_SECRET=your-super-secret-256-bit-key-change-in-production-use-crypto-random
+JWT_EXPIRES_IN=7d
+BCRYPT_ROUNDS=12
+
+# AWS S3 Configuration
+AWS_REGION=ap-south-1
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_S3_BUCKET=thedarji-uploads
+AWS_S3_INVOICE_BUCKET=thedarji-invoices
 
 # Business Information
 BUSINESS_NAME="The Darji - Where Tradition Meets Elegance"
@@ -14,6 +24,14 @@ BUSINESS_PHONE="+918854017433"
 BUSINESS_EMAIL="thedarji.creations@gmail.com"
 BUSINESS_ADDRESS="Jaipur, Rajasthan"
 
-# WhatsApp Configuration (Optional - for future Business API integration)
+# WhatsApp Configuration (Future)
 WHATSAPP_API_URL=
 WHATSAPP_API_TOKEN=
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# File Upload Limits
+MAX_FILE_SIZE=5242880
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp,application/pdf
