--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-darji-app",
-  "version": "1.0.0",
-  "description": "Business Management App for The Darji - Custom Tailoring Services",
+  "version": "2.0.0",
+  "description": "Enterprise Business Management App for The Darji - Custom Tailoring Services",
   "main": "server/index.js",
   "type": "module",
   "scripts": {
@@ -10,37 +10,40 @@
     "client": "cd client && npm run dev",
     "build": "cd client && npm run build",
     "start": "node server/index.js",
-    "postinstall": "node server/scripts/postinstall.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "migrate": "node server/scripts/migrate-to-mongodb.js"
   },
   "keywords": [
     "tailoring",
     "business-management",
     "invoice",
-    "orders"
+    "orders",
+    "mongodb",
+    "enterprise"
   ],
   "author": "The Darji",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.9.1",
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/s3-request-presigner": "^3.700.0",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^1.41.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.0.2",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
-    "pdfkit": "^0.14.0",
-    "pg": "^8.16.3"
+    "pdfkit": "^0.15.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.0.3",
-    "prisma": "^5.9.1"
+    "nodemon": "^3.0.3"
   }
 }
